# excel2xml

./: .gitignore  Cargo.toml  README.md  sample.xml
resources/test/: transform_xlsx.hcl
src/: canonicalize_path.rs  errors.rs  expression_trait.rs  extract.rs  main.rs  operations.rs  path_dict.rs  special_propnames.rs
src/api/: calls.rs  download_resources.rs  error.rs  mod.rs  request.rs  search.rs
src/cli/: read.rs
src/create_hcl/: errors.rs  hcl_resource.rs  supplement_hcl.rs  write_hcl.rs
src/json2datamodel/: mod.rs
src/json2datamodel/domain/: comment.rs  dasch_list.rs  data_model.rs  label.rs  mod.rs  object.rs  ontology.rs  property.rs  res_property.rs  resource.rs
src/parse_dm/: errors.rs  mod.rs
src/parse_dm/domain/: cardinality.rs  comment.rs  dasch_list.rs  data_model.rs  gui_element.rs  label.rs  mod.rs  object.rs  (+5 more)
src/parse_hcl/: errors.rs  header_value.rs  mod.rs  position.rs  transformations.rs  wrapper_trait.rs
src/parse_info/: errors.rs  header_value.rs  mod.rs  transformations.rs  wrapper_trait.rs
src/parse_xlsx/: errors.rs  mod.rs  operations.rs
src/path_operations/: canonicalize_path.rs  errors.rs  mod.rs  path_operations.rs
src/read_csv/: read_csv.rs
src/read_hcl/: errors.rs  get_file.rs  mod.rs
src/read_json/: errors.rs  get_file.rs  mod.rs
src/read_xlsx/: errors.rs  extract.rs  get_file.rs  mod.rs  sheet.rs  worksheet.rs
src/write_csv/: mod.rs  write_csv.rs
src/write_hcl/: HCL_resource.rs  errors.rs  mod.rs  supplement_hcl.rs  write_hcl.rs
src/write_xml/: errors.rs  mod.rs  write_xml.rs  xml_permissions.rs
(+105 files in other folders)
