[package]
name = "excel2xml"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-xml-builder = "1.1.0"
serde_json = "1.0.127"
calamine = "0.26.1" # excel
hcl-rs = "0.18.0" # HCL parser
rust_decimal = "1.36.0"
regex = "1.11.0"
log = "0.4.22"
clap = { version = "4.4.0", features = ["derive"] } # command-line parser
